--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>FrontEnd Ninja</title>
     <meta charset="utf-8">
-    <meta name=”viewport” content="initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
@@ -28,7 +29,7 @@
       <section class="row">
         <div class="col-md-12">
           <picture>
-            <source media="(min-width: 1000px)" srcset="img/poster-01-1024_large.jpg 2x, img/poster-01_large_1x.jpg 1x">
+            <source media="(min-width: 1000px)" srcset="img/poster-01-1024_large.jpg 2x, img/poster-01-1024_large_x1.jpg 1x">
             <source media="(min-width: 400px)" srcset="img/poster-01-640_medium.jpg 2x">
             <img class="img-responsive" src="img/poster-01-320_small.jpg" alt="rick-and-morty-poster">
           </picture>
@@ -42,27 +43,27 @@
       </div>
 
       <section class="row projects">
-        <article class="col-md-4">
+        <article class="col-md-4 text-center">
           <picture>
-            <source media="(min-width: 1000px)" srcset="img/poster-02-1024_large.jpg 2x, img/poster-02_large_1x.jpg 1x">
+            <source media="(min-width: 1000px)" srcset="img/poster-02-1024_large.jpg 2x, img/poster-02-1024_large_x1.jpg 1x">
             <source media="(min-width: 400px)" srcset="img/poster-02-640_medium.jpg 2x">
             <img class="img-responsive" src="img/poster-02-320_small.jpg" alt="rick-and-morty-poster">
           </picture>
           <h3 class="project-title text-uppercase">Appify</h3>
           <p><a href="https://github.com/udacity/Appify/">Link to project</a></p>
         </article>
-        <article class="col-md-4">
+        <article class="col-md-4 text-center">
           <picture>
-            <source media="(min-width: 1000px)" srcset="img/poster-03-1024_large.jpg 2x, img/poster-03_large_1x.jpg 1x">
+            <source media="(min-width: 1000px)" srcset="img/poster-03-1024_large.jpg 2x, img/poster-03-1024_large_x1.jpg 1x">
             <source media="(min-width: 400px)" srcset="img/poster-03-640_medium.jpg 2x">
             <img class="img-responsive" src="img/poster-03-320_small.jpg" alt="rick-and-morty-poster">
           </picture>
           <h3 class="project-title text-uppercase">Sunflower</h3>
           <p><a href="https://github.com/udacity/Sunflower/">Link to project</a></p>
         </article>
-        <article class="col-md-4">
+        <article class="col-md-4 text-center">
           <picture>
-            <source media="(min-width: 1000px)" srcset="img/poster-04-1024_large.png 2x, img/poster-04_large_1x.png 1x">
+            <source media="(min-width: 1000px)" srcset="img/poster-04-1024_large.png 2x, img/poster-04_large_x1.png 1x">
             <source media="(min-width: 500px)" srcset="img/poster-04-640_medium.png">
             <source media="(min-width: 250px)" srcset="img/poster-04-320_small.png">
             <img class="img-responsive" src="img/poster-04-320_small.png" alt="rick-and-morty-poster">
